[package]
name = "rs-net-snmp"
version = "0.1.0"
authors = ["William Brown <wibrown@redhat.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2.0"
getopts = "0.2"

[lib]
path="src/rs_net_snmp/lib.rs"

[[bin]]
path="src/rs_net_snmp_utils/rsnmpdemo.rs"
name="rsnmpdemo"

[[bin]]
path="src/rs_net_snmp_utils/rsnmpget.rs"
name="rsnmpget"

[[bin]]
path="src/rs_net_snmp_utils/optsdemo.rs"
name="optsdemo"
