[package]
name = "rs-net-snmp"
version = "0.1.0"
authors = ["William Brown <wibrown@redhat.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"
getopts = "0.2"
toml = "0.1"

[lib]
path="src/rs_net_snmp/lib.rs"

[[bin]]
path="src/rs_net_snmp_utils/rsnmpdemo.rs"
name="rsnmpdemo"

[[bin]]
path="src/rs_net_snmp_utils/rsnmpget.rs"
name="rsnmpget"

[[bin]]
path="src/rs_net_snmp_utils/rsnmpmonitor.rs"
name="rsnmpmonitor"
